--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.13.6",
     "css-loader": "^2.1.0",
     "firebase": "^5.7.0",
     "flow-bin": "^0.94.0",
