--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "semantic-ui-react": "^0.84.0",
-    "typesafe-actions": "^2.0.4"
+    "typesafe-actions": "^2.0.4",
+    "vue2-datepicker": "^2.10.3",
+    "vuejs-datepicker": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +35,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
+  }
 }
