--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.13.6",
+    "axios": "^0.18.0",
     "css-loader": "^2.1.0",
     "firebase": "^5.7.0",
     "flow-bin": "^0.94.0",
@@ -27,6 +28,7 @@
     "eject": "react-scripts eject",
     "flow": "flow"
   },
+  "proxy": "http://localhost:8000",
   "eslintConfig": {
     "extends": "react-app"
   },
