--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1"
   },
