--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^1.4.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-image-gallery": "^0.8.16",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
